--- a/src/main/resources/templates/listTask.html
+++ b/src/main/resources/templates/listTask.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extrase/spring-security">
+>
 <head>
     <meta charset="UTF-8">
     <title>Registration and Login System</title>
@@ -9,6 +9,7 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-white">
@@ -41,28 +42,33 @@
 </nav>
 <div class="container" style=" max-width: 16890px">
     <div class="row col-md-10">
-        <h2>List Task</h2>
+        <h2>Manager Task Detail</h2>
     </div>
-    <br>
-    <table class="table table-bordered table-hover" >
+    <table class="table table-bordered table-hover">
         <thead class="table-success">
         <tr>
             <th>ID</th>
+            <th> Member</th>
+            <th> Project Name</th>
             <th> Task Name</th>
-            <th> Create Date</th>
-            <th> Update Date</th>
             <th> Estimate Time</th>
+            <th> Time Work</th>
 
         </tr>
         </thead>
         <tbody>
-        <tr th:each="item : ${tasks}">
+        <tr th:each="item : ${taskList}">
             <td th:text="${item.getId()}"></td>
-            <td><a th:href="@{/taskDetail/detail/{id}(id=${item.getId()})}" th:each="taskItem: ${item.getTask()}" th:text="${taskItem.getName()}"></a> </td>
-            <td th:text="${item.getCreateDate()}"></td>
-            <td th:text="${item.getUpdateBy()}"></td>
+            <td th:each="itemUser : ${item.getTask().getUser()}"
+                th:text="${itemUser.getUsername()}"></td>
+            <td th:each="itemProject : ${item.getTask().getProject()}"
+                th:text="${itemProject.getProjectName()}"></td>
+            <td th:each="itemScheduleTask: ${item.getTask().getScheduleTask()}"
+                th:text="${itemScheduleTask.getTimeWork}"></td>
             <td th:text="${item.getEstimateTime()}"></td>
-
+            <!--            <td><a th:href="@{/taskDetail/detail/{id}(id=${item.getId()})}">Detail</a></td>-->
+            <!--            <td><a th:href="@{/taskDetail/edit/{id}(id=${item.getId()})}">Edit</a></td>-->
+            <!--            <td><a th:href="@{/taskDetail/delete/{id}(id=${item.getId()})}">Delete</a></td>-->
         </tr>
         </tbody>
     </table>
